# expect-dialog-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  test.rs
