[package]
name = "expect-dialog"
version = "1.0.0"
edition = "2021"
authors = ["Jack <jrosenbeckerdev@gmail.com>"]
description = " A simple utility for error handling that uses a dialog for it's notification as opposed to just stdout"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/CorneliusCornbread/expect-dialog-rs"
homepage = "https://github.com/CorneliusCornbread/expect-dialog-rs"
readme = "README.md"
keywords = ["utility", "error", "handling", "dialog", "GUI"]
categories = ["gui"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.4"
